--- a/index.html
+++ b/index.html
@@ -1,7 +1,218 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta charset="utf-8"/>
+<title>Gamedev Canvas Workshop</title>
+<style>  
+*{padding: 0; margin: 0;}
+canvas { background: #eee; display: block; margin: 0 auto; }
+</style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<canvas id="myCanvas" width="480" height="320"></canvas>
+<script>  
+var canvas = document.getElementById("myCanvas");
+var ctx = canvas.getContext("2d");
+
+var x = canvas.width/10;
+var y = canvas.height-30;
+var dx = 2;
+var dy = -2;
+
+var ballRadius = 10;
+var ballColour = "#0095DD";
+
+var paddleHeight = 15;
+var paddleWidth = 75;
+var paddleX = (canvas.width-paddleWidth) / 2;
+var rightPressed = false;
+var leftPressed = false;
+
+var brickRowCount = 3;
+var brickColumnCount = 5;
+var brickWidth = 75;
+var brickHeight = 20;
+var brickPadding = 10;
+var brickOffsetTop = 30;
+var brickOffsetLeft = 30;
+
+var score = 0;
+
+var lives = 3;
+
+
+var bricks = [];
+for(var c=0; c<brickColumnCount; c++){
+    bricks[c] = [];
+    for(var r=0; r<brickRowCount; r++){
+        bricks[c][r]= {x: 0, y:0, status: 1};
+
+    }
+}
+
+
+
+document.addEventListener("keydown", keyDownHandler, false);
+document.addEventListener("keyup", keyUpHandler, false);
+document.addEventListener("mousemove", mouseMoveHandler, false);
+
+
+function keyDownHandler(e) {
+    if(e.key == "Right" || e.key == "ArrowRight") {
+        rightPressed = true;
+    }
+    else if(e.key == "Left" || e.key == "ArrowLeft") {
+        leftPressed = true;
+    }
+}
+
+function keyUpHandler(e) {
+    if(e.key == "Right" || e.key == "ArrowRight") {
+        rightPressed = false;
+    }
+    else if(e.key == "Left" || e.key == "ArrowLeft") {
+        leftPressed = false;
+    }
+}
+
+function mouseMoveHandler(e) {
+  var relativeX = e.clientX - canvas.offsetLeft;
+  if(relativeX > 0 && relativeX < canvas.width) {
+    paddleX = relativeX - paddleWidth/2;
+  }
+  }
+
+function collisionDetection(){
+    for (var c=0; c<brickColumnCount; c++){
+        for (var r=0; r<brickRowCount; r++){
+            var b = bricks[c][r];
+            if(b.status	==1)
+            {
+            if(x>b.x && x< b.x + brickWidth && y > b.y && y < b.y + brickHeight)
+            {
+                dy = -dy;
+                b.status =0;
+                ballColour = "red";
+                score += 10;
+                if(score == brickColumnCount*brickRowCount*10){
+                    alert("   YOU  WON \n SCORE:" + score);
+                    document.location.reload();
+                }
+            }
+            }
+}
+
+}
+
+}
+function drawScore(){
+    ctx.font = "16px Arial";
+    ctx.fillStyle = "black";
+    ctx.fillText("score: "+score, 8, 20);
+}
+
+function drawLives(){
+    ctx.font = "16px Arial";
+    ctx.fillStyle = "green";
+    ctx.fillText("Lives: "+lives, canvas.width-65, 20);
+}
+
+function drawBall(){
+ctx.beginPath();
+ctx.arc(x, y, ballRadius, 0, Math.PI*2);
+ctx.fillStyle = ballColour;
+ctx.fill();
+ctx.closePath();
+}
+//drawing the paddle
+function drawPaddle(){
+ctx.beginPath();
+ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
+ctx.fillStyle = "#0095DD";
+ctx.fill();
+ctx.closePath();}
+
+
+
+function drawBricks(){
+    for(var c=0; c < brickColumnCount; c++){
+        for(var r=0; r<brickRowCount; r++){
+           if(bricks[c][r].status == 1){ 
+            var brickX = (c*(brickWidth + brickPadding))+brickOffsetLeft;
+            var brickY = (r*(brickHeight + brickPadding))+brickOffsetTop;
+            bricks[c][r].x= brickX;
+            bricks[c][r].y= brickY;
+            ctx.beginPath();
+            ctx.rect(brickX,brickY,brickWidth, brickHeight);
+            ctx.fillStyle = "#0095DD";
+            ctx.fill();
+            ctx.closePath();
+           }
+        }
+    }
+}
+
+function draw(){
+ctx.clearRect(0, 0, canvas.width, canvas.height)
+drawBricks();
+drawBall();
+drawPaddle();
+drawScore();
+drawLives();
+collisionDetection();
+drawBricks();
+
+if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
+        dx = -dx;
+    }
+if(y + dy < ballRadius) {
+    dy = -dy;
+} else if(y + dy > canvas.height-ballRadius) {
+    if(x > paddleX && x < paddleX + paddleWidth) {
+        dy = -dy;
+        ballColour = "#0095DD";
+    }
+    else {
+   lives--; 
+   if(!lives){
+    alert("GAME OVER");
+    document.location.reload();
+  
+   }else{
+       x=canvas.width/2;
+       y=canvas.height-30;
+       dx = 2;
+       dy = -2;
+       paddleX = (canvas.width - paddleWidth)/2;
+   }
+    }
+}
+
+//paddle movement
+if(rightPressed){
+paddleX += 7;
+if (paddleX + paddleWidth > canvas.width){
+    paddleX = canvas.width - paddleWidth;
+    }
+}
+else if (leftPressed){
+    paddleX -= 7;
+    if (paddleX < 0){
+        paddleX = 0;
+    }
+}
+
+
+
+x += dx;
+y += dy;
+requestAnimationFrame(draw);
+}
+
+
+draw();
+</script>
 </body>
+
 </html>
