--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
     
             <div class="nav-link-wrapper">
-              <a href="breakout.html">breakout</a>
+              <a href="projects.html">projects</a>
             </div>
           
             <div class="nav-link-wrapper">
