--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 <html>
     <head>
         <meta charset='UTF-8'>
-        <title>Breakout</title>
+        <title>projects</title>
        <link rel="stylesheet" href="styles.css">
       <style>
        *{padding: 0; margin: 0;}
@@ -22,7 +22,7 @@
                 </div>
         
                 <div class="nav-link-wrapper">
-                  <a href="breakout.html">breakout</a>
+                  <a href="projects.html" >projects</a>
                 </div>
               
                 <div class="nav-link-wrapper">
