--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             </div>
         </div>
 
-        <div> THIS IS MY WEBISTE</div>
+        <div><a href="https://github.com/Alex-Die"> MY Github account</a></div>
     
     </body>
 </html>
