--- a/breakout.html
+++ b/breakout.html
@@ -43,7 +43,7 @@ canvas { background:black; display: block; margin: 0 auto; }
         </div>
     </div>
 
-    <div> THIS IS MY WEBISTE</div>
+    <div>   </div>
 
 </body>
 
