--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="welcome">
         <div class = "meme"> <img src="images/notmuchIMG.png" >   </div>
         <div class="welcome-text"> </div>
-        <div class="welcome-text"> Work in progress.</div>
+        <div class="welcome-text"> Work in progress...</div>
         <div class="welcome-text"> Take a look at PROJECTS and ABOUT.</div>
         
         </div>
