--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
        </style>
       </head>
      
-      <body>
+      <body style="color: black;">
         <div class="container">
             <div class="nav-wrapper">
               <div class="left-side">
