--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <title>About</title>
+        <link rel="icon" type="image/x-icon" href="\images\favivcon.png" />
        <link rel="stylesheet" href="styles.css">
      
       </head>
