--- a/breakout.html
+++ b/breakout.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>Breakout</title>
+<link rel="icon" type="image/x-icon" href="\images\favivcon.png" />
 <link rel="stylesheet" href="styles.css"> 
 <style> 
  
