--- a/about.html
+++ b/about.html
@@ -41,7 +41,8 @@
             </div>
         </div>
 
-        <div><a href="https://github.com/Alex-Die"> MY Github account</a></div>
-    
-    </body>
+        <div class="about">
+         <a href="https://github.com/Alex-Die"><img src="images/githublogo.png" class="resize" ></a>    
+      </div>
+      </body>
 </html>
