--- a/OttoHappy.html
+++ b/OttoHappy.html
@@ -73,7 +73,12 @@
     <div class="scroll-content">
         <h2>Die 5 Grundbausteine der Kreativität</h2>
         <p>Kreatives denken und Kritische denken stehen sehr nah beieinander</p>
-        <p>Kreativität ist ein Zusammenspiel aus vielen Faktoren. Inspiration ist der Funke, der Ideen entzündet, während Neugier uns antreibt, neue Wege zu erkunden. Doch ohne Wissen als Fundament bleiben viele Ideen nur Träume. Kritik hilft uns, unsere Gedanken zu schärfen und zu verbessern – auch wenn sie manchmal schwer anzunehmen ist. Schließlich brauchen wir Ruhe, um Gedanken reifen zu lassen und neue Verbindungen zu entdecken. Kreativität lebt von Balance: zwischen Denken und Tun, Chaos und Struktur, Offenheit und Fokus.
+        <p> Inspiration gibt uns den Funken, neue Ideen zu entdecken, während Neugier uns antreibt, tiefer zu graben und mehr zu lernen.
+             Dabei ist Wissen die Grundlage, auf der unsere Gedanken wachsen und sich entfalten können. 
+             In der Ruhe finden wir die Klarheit, 
+             unsere Gedanken zu ordnen und sorgfältig zu hinterfragen. 
+             Es braucht jedoch auch Mut, um neue Wege zu gehen, alte Muster zu brechen und ungewohnte Perspektiven zuzulassen. 
+             Zusammen schaffen diese Elemente den Raum, in dem Innovation und Reflexion Hand in Hand gehen.</p>
         
         <p>bleib Kreativ </p>
     </div>
