--- a/OttoHappy.html
+++ b/OttoHappy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Input Action</title>
+    <title>OttoHappy</title>
     <style>
         body {
             font-family: Arial, sans-serif;
